--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@faker-js/faker": "^7.6.0",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
